Add Update customer functionality
